Version CVS HEAD (?)

  * packaging changes:
    - ported to Windows using native Windows functions for file IO
      (provided Dev-C++ + mingw project file)

Version 3.1.0 (24 Nov 2006)

  * packaging changes:
    - changed deprecated copyright attribute to license;
      added ldconfig to post-(un)install steps on libgig.spec (RPM)

  * src/gig.cpp, src/gig.h:
    - added support for more than one set of custom velocity splits
      inside a region (for example different velocity split levels for
      pedal up and pedal down)
    - sample loop parameters are now taken from the DimensionRegion
      instead of the wave chunk
    - keyswitching dimension is changed from split type "normal" to
      "bit"
    - real support for 24 bit samples - samples are not truncated to
      16 bits anymore
    - support for reading of ".art" files. (Merging of .art and .gig
      files are not implemented yet.)
    - several fixes for the write support
    - support for sample groups added

  * src/DLS.cpp, src/DLS.h:
    - support for reading of ".art" files
    - removed incorrect use of memccpy in the write support (patch by
      Jeremy Kerr)
    - several fixes for the write support

  * src/gigextract.cpp:
    - real support for 24 bit samples

  * src/gigdump.cpp:
    - print global file informations
    - print sample groups

  * general changes:
    - added CPPUnit test cases (at the moment primarily for automatic check
      of Gigasampler write support)

Version 3.0.0 (28 Apr 2006)

  * general changes:
    - added write support (that is for creating and modifying RIFF, DLS and
      gig files)
    - loading DLS and gig files is now much more permissive, DLS and gig
      files are now loaded even if mandatory RIFF chunks are missing
    - fixed some memory management errors, one of them was causing a
      crash when a multi-file gig was deallocated

  * src/gig.cpp, src/gig.h:
    - fixed the GetVelocityCutoff function, it wasn't always using the